--- a/starclass/SLOSH/.gitattributes
+++ b/starclass/SLOSH/.gitattributes
@@ -1,2 +1,4 @@
-sample_data filter=lfs diff=lfs merge=lfs -text
-sample_models filter=lfs diff=lfs merge=lfs -text
+sample_models/regressor filter=lfs diff=lfs merge=lfs -text
+sample_models/classifier filter=lfs diff=lfs merge=lfs -text
+sample_data/sample_image filter=lfs diff=lfs merge=lfs -text
+sample_data/sample_psd filter=lfs diff=lfs merge=lfs -text
