--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
 python:
-  - "2.7"
   - "3.5"
   - "3.6"
-  
+
 # Python 3.7 has to be done a different way
 # https://github.com/travis-ci/travis-ci/issues/9069
 jobs:
@@ -14,11 +13,11 @@ jobs:
       sudo: required
 
 # Allow some versions of Python to fail:
-matrix:
-  fast_finish: true
-  allow_failures:
-    - python: "2.7"
-    
+#matrix:
+#  fast_finish: true
+#  allow_failures:
+#    - python: "2.7"
+
 # Command to install dependencies
 install:
   - pip install -r requirements.txt
