--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jobs:
 
 # Command to install dependencies
 install:
+  - pip install --upgrade pip
   - pip install -r requirements.txt
 script:
   - pytest
