Bug fixes and fully training models

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ scikit-learn
 Bottleneck == 1.2.1
 requests
 keras
-tensorflow
+tensorflow == 1.13.1
 Pillow
 xgboost
-[-e] git+https://github.com/jsk389/upsilon
+-e git+https://github.com/jsk389/upsilon
