--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-numpy == 1.15.4
+pytest
+numpy == 1.16.5
+matplotlib
+scipy == 1.3.3
 astropy >= 3.1
 lightkurve >= 1.0.0
-scikit-learn
-Bottleneck == 1.2.1
+scikit-learn == 0.21.3
+Bottleneck == 1.3.1
 requests
-keras
 tensorflow == 1.15.0
+keras
 Pillow
 xgboost
