--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 starclass/data/L1/** filter=lfs diff=lfs merge=lfs -text
 starclass/data/L2/** filter=lfs diff=lfs merge=lfs -text
+tests/input/** filter=lfs diff=lfs merge=lfs -text
