--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,11 @@ ignore =
 #	W292, # no newline at end of file
 #	W293 # blank line contains whitespace
 
+[tool:pytest]
+testpaths = tests
+#log_cli = True
+#log_cli_level = INFO
+
 #[coverage:run]
 #branch = True
 
