--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "3.5"
   - "3.6"
+cache: pip
 
 # Python 3.7 has to be done a different way
 # https://github.com/travis-ci/travis-ci/issues/9069
@@ -11,6 +12,22 @@ jobs:
       python: "3.7"
       dist: xenial
       sudo: required
+
+    - name: "Python 3.6.8 on Windows"
+      os: windows
+      language: shell  # 'language: python' is an error on Travis CI Windows
+      before_install:
+        - choco install python --version 3.6.8
+        - python --version
+      env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
+
+    - name: "Python 3.7.4 on Windows"
+      os: windows
+      language: shell  # 'language: python' is an error on Travis CI Windows
+      before_install:
+        - choco install python --version 3.7.4
+        - python --version
+      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
 
     - name: "Flake8"
       python: "3.6"
@@ -27,6 +44,7 @@ jobs:
   fast_finish: true
   allow_failures:
     - name: "Flake8"
+    - os: windows
 
 # Command to install dependencies
 before_install:
