--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ lightkurve >= 1.0.0
 scikit-learn == 0.21.3
 Bottleneck == 1.3.1
 requests
+setuptools >= 41.0.0 # Required by tensorflow 1.15
 tensorflow == 1.15.0
 keras
 Pillow
