--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,47 @@
 language: python
-python:
-  - "3.5"
-  - "3.6"
 cache: pip
+sudo: required
 
-# Python 3.7 has to be done a different way
-# https://github.com/travis-ci/travis-ci/issues/9069
+# We are specifying the build matix manually, since there is too little overlap
+# between the different builds:
 jobs:
   include:
-    - language: python
+    - name: "Python 3.5 on Linux"
+      python: "3.5"
+      before_install:
+        # This is required for XGBoost to work on older Ubuntu machines:
+        - sudo apt-get update && sudo apt-get install libgomp1
+
+    - name: "Python 3.6 on Linux"
+      python: "3.6"
+      before_install:
+        # This is required for XGBoost to work on older Ubuntu machines:
+        - sudo apt-get update && sudo apt-get install libgomp1
+
+    - name: "Python 3.7 on Linux"
       python: "3.7"
       dist: xenial
-      sudo: required
 
-    - name: "Python 3.6.8 on Windows"
+    - name: "Python 3.6 on Windows"
       os: windows
       language: shell  # 'language: python' is an error on Travis CI Windows
       before_install:
         - choco install python --version 3.6.8
+        - choco install git-lfs
         - python --version
+        - python -m pip install --upgrade pip
+        - git lfs pull
       env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
 
-    - name: "Python 3.7.4 on Windows"
+    - name: "Python 3.7 on Windows"
       os: windows
       language: shell  # 'language: python' is an error on Travis CI Windows
       before_install:
         - choco install python --version 3.7.4
+        - choco install git-lfs
         - python --version
+        - python -m pip install --upgrade pip
+        - git lfs pull
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
 
     - name: "Flake8"
@@ -47,9 +62,6 @@ jobs:
     - os: windows
 
 # Command to install dependencies
-before_install:
-  # This is required for XGBoost to work on older Ubuntu machines:
-  - sudo apt-get update && sudo apt-get install libgomp1
 install:
   - pip install --upgrade pip
   - pip install -r requirements.txt
