--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pytest
 numpy == 1.16.5
-matplotlib
+matplotlib == 3.0.3
 scipy == 1.3.3
 astropy >= 3.1
 lightkurve >= 1.0.0
@@ -9,6 +9,6 @@ Bottleneck == 1.3.1
 requests
 setuptools >= 41.0.0 # Required by tensorflow 1.15
 tensorflow == 1.15.2
-keras
+keras == 2.3.1
 Pillow
-xgboost
+xgboost == 0.90
