--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,11 @@ jobs:
       python: "3.7"
       dist: xenial
 
+    - name: "Python 3.7 on Mac"
+      os: osx
+      osx_image: xcode11.2 # Python 3.7.4 running on macOS 10.14.4
+      language: shell # 'language: python' is an error on Travis CI macOS
+
     - name: "Python 3.6 on Windows"
       os: windows
       language: shell  # 'language: python' is an error on Travis CI Windows
@@ -57,6 +62,7 @@ jobs:
   allow_failures:
     - name: "Flake8"
     - os: windows
+    - os: osx
 
 # Command to install dependencies
 install:
