--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,29 @@ jobs:
       python: "3.7"
       dist: xenial
 
+    - name: "Python 3.6 on Mac"
+      os: osx
+      osx_image: xcode9.4 # Python 3.6.5
+      language: shell
+      install:
+        - python3 --version
+        - pip3 install -U pip
+        - pip3 install -r requirements
+        - pip3 install codecov pytest-cov
+      script: python3 -m pytest
+      after_success: python 3 -m codecov
+
     - name: "Python 3.7 on Mac"
       os: osx
       osx_image: xcode11.2 # Python 3.7.4 running on macOS 10.14.4
-      language: shell # 'language: python' is an error on Travis CI macOS
+      language: shell
+      install:
+        - python3 --version
+        - pip3 install -U pip
+        - pip3 install -r requirements
+        - pip3 install codecov pytest-cov
+      script: python3 -m pytest
+      after_success: python 3 -m codecov
 
     - name: "Python 3.6 on Windows"
       os: windows
