--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
       before_install:
         - brew install git-lfs
         - python3 --version
+        - git lfs install
         - git lfs pull
       install:
         - pip3 install --upgrade pip
@@ -44,6 +45,7 @@ jobs:
       before_install:
         - brew install git-lfs
         - python3 --version
+        - git lfs install
         - git lfs pull
       install:
         - pip3 install --upgrade pip
