Code cleanup and refactoring. Issues #38 and #39

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,14 +16,13 @@ ignore =
 	E305, # expected 2 blank lines after class or function definition, found 1
 	E501, # line too long
 	E701, # multiple statements on one line (colon)
+	E731, # Do not assign a lambda expression, use a def
 	W191, # indentation contains tabs
-#	W292, # no newline at end of file
-#	W293 # blank line contains whitespace
 
 [tool:pytest]
 testpaths = tests
-#log_cli = True
-#log_cli_level = INFO
+log_cli = True
+log_cli_level = WARNING
 
 #[coverage:run]
 #branch = True
