--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
         - pip3 install --upgrade pip
         - pip3 install -r requirements.txt
         - pip3 install codecov pytest-cov
-      script: python3 -m pytest
+      script: python3 -m pytest --cov=starclass/
       after_success: python3 -m codecov
 
     - name: "Python 3.7 on Mac"
@@ -51,7 +51,7 @@ jobs:
         - pip3 install --upgrade pip
         - pip3 install -r requirements.txt
         - pip3 install codecov pytest-cov
-      script: python3 -m pytest
+      script: python3 -m pytest --cov=starclass/
       after_success: python3 -m codecov
 
     - name: "Python 3.6 on Windows"
