Moved documentation to individual modules

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,20 @@
 language: python
 cache: pip
 os: linux
+dist: xenial
 
-# We are specifying the build matix manually, since there is too little overlap
+# We are specifying the build matrix manually, since there is too little overlap
 # between the different builds:
 jobs:
   include:
     - name: "Python 3.5 on Linux"
       python: "3.5"
-      before_install:
-        # This is required for XGBoost to work on older Ubuntu machines:
-        - sudo apt-get update && sudo apt-get install libgomp1
 
     - name: "Python 3.6 on Linux"
       python: "3.6"
-      before_install:
-        # This is required for XGBoost to work on older Ubuntu machines:
-        - sudo apt-get update && sudo apt-get install libgomp1
 
     - name: "Python 3.7 on Linux"
       python: "3.7"
-      dist: xenial
 
     - name: "Python 3.6 on Mac"
       os: osx
