--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 pytest
-numpy == 1.16.5
-matplotlib == 3.0.3
+numpy == 1.17.5
+matplotlib == 3.2.1
 scipy == 1.3.3
-astropy >= 3.1
-lightkurve >= 1.0.0
-scikit-learn == 0.21.3
-Bottleneck == 1.3.1
+astropy == 3.2.3
+lightkurve >= 1.7.0
+scikit-learn == 0.22.2
+Bottleneck == 1.3.2
 requests
 setuptools >= 41.0.0 # Required by tensorflow 1.15
 tensorflow == 1.15.2
