--- a/.travis.yml
+++ b/.travis.yml
@@ -109,6 +109,7 @@ install:
   - $PYTHON -m pip install --upgrade pip
   - $PIP install -r requirements.txt
   - $PIP install codecov pytest-cov
+  - travis_wait $PYTHON run_download_cache.py -q
 script:
   - $PYTHON -m pytest --cov=starclass/
 after_success:
