--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ lightkurve >= 1.7.0
 scikit-learn == 0.23
 Bottleneck == 1.3.2
 requests
-setuptools >= 41.0.0 # Required by tensorflow 1.15
-tensorflow == 2.3.0
+setuptools >= 41.0.0
+tensorflow == 2.3.1
 Pillow
 xgboost == 0.90
 tqdm
