Flake8 changes, enabling extensions
Added flake8 as explicit requirement.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,11 @@
 exclude = .git,__pycache__,notes
 max-line-length = 99
 
+# Using the following extensions:
+# flake8-builtins
+# flake8-logging-format
+enable-extensions=G
+
 ignore =
 	E117, # over-indented (set when using tabs)
 	E127, # continuation line over-indented for visual indent
