--- a/setup.cfg
+++ b/setup.cfg
@@ -2,10 +2,13 @@
 exclude = .git,__pycache__,notes
 max-line-length = 99
 
-# Using the following extensions:
-# flake8-builtins
-# flake8-logging-format
-enable-extensions=G
+# Enable flake8-logging-format:
+enable-extensions = G
+
+# Configuration of flake8-tabs:
+use-flake8-tabs = True
+blank-lines-indent = never
+indent-tabs-def = 1
 
 ignore =
 	E117, # over-indented (set when using tabs)
@@ -22,7 +25,7 @@ ignore =
 	E501, # line too long
 	E701, # multiple statements on one line (colon)
 	E731, # Do not assign a lambda expression, use a def
-	W191, # indentation contains tabs
+	ET128, # (flake8-tabs) unexpected number of tabs and spaces at start of XXX
 
 [tool:pytest]
 testpaths = tests
