--- a/setup.cfg
+++ b/setup.cfg
@@ -32,8 +32,13 @@ testpaths = tests
 log_cli = True
 log_cli_level = WARNING
 
-#[coverage:run]
-#branch = True
+[coverage:run]
+source = ./
+omit =
+	tests/*
+	notes/*
+	docs/*
+	run_download_cache.py
 
 [coverage:report]
 precision = 2
