--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numpy == 1.19.4
 matplotlib == 3.3.2
 scipy == 1.5.4
 astropy == 4.1
-lightkurve >= 1.7.0
+lightkurve >= 1.7.0, < 2.0
 scikit-learn == 0.23.2
 Bottleneck == 1.3.2
 requests
