--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,9 +50,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install OS specific requirements
+      if: runner.os == 'macOS'
+      run: brew install libomp
+
     - name: Install dependencies
       run: |
-        [ "${{ runner.os }}" = "macOS" ] && brew install libomp
         python -m pip install --upgrade pip wheel
         grep "numpy" requirements.txt | xargs -I {} pip install "{}"
         pip install -r requirements.txt
