Setup.cfg updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ enable-extensions = G
 use-flake8-tabs = True
 blank-lines-indent = never
 indent-tabs-def = 1
+indent-style = tab
 
 ignore =
 	E117, # over-indented (set when using tabs)
@@ -28,7 +29,9 @@ ignore =
 	ET128, # (flake8-tabs) unexpected number of tabs and spaces at start of XXX
 
 [tool:pytest]
+addopts = --strict-markers --durations=10
 testpaths = tests
+xfail_strict = True
 log_cli = True
 log_cli_level = WARNING
 
