--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -102,3 +102,33 @@ jobs:
         flake8 --select=E9,F63,F7,F82 --ignore=G001 --show-source
         # exit-zero treats all errors as warnings.
         flake8 --exit-zero
+
+
+  # Use sphinx to build the documentation
+  docs:
+    name: Build documentation
+    needs: flake8 # Don't bother if flake8 failed
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Setup Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip wheel
+        grep "numpy" requirements.txt | xargs -I {} pip install "{}"
+        pip install -r requirements.txt
+        pip install -r requirements-docs.txt
+
+    - name: Build Sphinx documentation
+      run: |
+        sphinx-build -a -W --no-color -b html -d docs/_build/doctrees docs docs/_build/html
+
+    #- name: Sphinx coverage
+    #  run: |
+    #    sphinx-build -a -W --no-color -b coverage -d docs/_build/doctrees docs docs/_build/coverage
