Ensure LFS is not downloaded when not needed

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
+        lfs: false
         fetch-depth: 0
 
     - name: Create LFS file list
@@ -83,6 +84,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        lfs: false
 
     - name: Setup Python 3.7
       uses: actions/setup-python@v2
@@ -112,6 +115,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        lfs: false
 
     - name: Setup Python 3.7
       uses: actions/setup-python@v2
