--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,8 +12,39 @@ on:
     - cron: '0 6 1 * *'  # once a month in the morning
 
 jobs:
+  # Use the `flake8` tool to check for syntax errors
+  flake8:
+    name: Flake8
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        lfs: false
+
+    - name: Setup Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip wheel
+        grep "numpy" requirements.txt | xargs -I {} pip install "{}"
+        pip install -r requirements.txt
+
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        # For some reason we have to specifically ignore G001 as well
+        flake8 --select=E9,F63,F7,F82 --ignore=G001 --show-source
+        # exit-zero treats all errors as warnings.
+        flake8 --exit-zero
+
+
   # Run unit tests on Linux, OSX and Windows
   pytest:
+    needs: flake8
     strategy:
       fail-fast: false
       matrix:
@@ -75,36 +106,6 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         env_vars: OS,PYTHON
-
-
-  # Use the `flake8` tool to check for syntax errors
-  flake8:
-    name: Flake8
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        lfs: false
-
-    - name: Setup Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip wheel
-        grep "numpy" requirements.txt | xargs -I {} pip install "{}"
-        pip install -r requirements.txt
-
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        # For some reason we have to specifically ignore G001 as well
-        flake8 --select=E9,F63,F7,F82 --ignore=G001 --show-source
-        # exit-zero treats all errors as warnings.
-        flake8 --exit-zero
 
 
   # Use sphinx to build the documentation
