--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -124,6 +124,9 @@ jobs:
     #    sudo apt-get install -y openmpi-bin libopenmpi-dev
     #    pip install mpi4py
 
+    - name: Download cache
+      run: python run_download_cache.py -q
+
     - name: Testing
       run: pytest --cov
 
