--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   # Use the `flake8` tool to check for syntax errors
   flake8:
-    name: Flake8 and data download
+    name: Flake8
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -49,16 +49,6 @@ jobs:
         flake8 --select=E9,F63,F7,F82 --ignore=G001 --show-source
         # exit-zero treats all errors as warnings.
         flake8 --exit-zero
-
-    - name: Download cache
-      run: python run_download_cache.py -q
-
-    - name: Upload training sets artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: training_sets
-        path: starclass/training_sets/data/
-        retention-days: 1
 
 
   # Run unit tests on Linux, OSX and Windows
@@ -134,10 +124,8 @@ jobs:
     #    sudo apt-get install -y openmpi-bin libopenmpi-dev
     #    pip install mpi4py
 
-    - name: Download training sets artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: training_sets
+    - name: Download cache
+      run: python run_download_cache.py -q
 
     - name: Testing
       run: pytest --cov
@@ -187,3 +175,69 @@ jobs:
     #- name: Sphinx coverage
     #  run: |
     #    sphinx-build -a -W --no-color -b coverage -d docs/_build/doctrees docs docs/_build/coverage
+
+
+  release:
+    if: startsWith(github.ref, "refs/tags/v")
+    needs: [pytest, docs]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+
+    - name: Create LFS file list
+      run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+
+    - name: Restore LFS cache
+      uses: actions/cache@v2
+      id: lfs-cache
+      with:
+        path: .git/lfs
+        key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1
+
+    - name: Git LFS Pull
+      run: git lfs pull
+
+    - name: Setup Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+
+    - name: Cache pip
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-py3.7-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-py3.7-
+          ${{ runner.os }}-pip-
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        grep "numpy" requirements.txt | xargs -I {} pip install "{}"
+        pip install -r requirements.txt
+
+    - name: Update VERSION file
+      run: python -c "from starclass import version; version.update_release_version();"
+
+    - name: Generate changelog
+      id: changelog
+      uses: metcalfc/changelog-generator@v1.0.0
+      with:
+        myToken: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Version ${GITHUB_REF##*/}
+        body: |
+          Version ${GITHUB_REF##*/}
+          ${{ steps.changelog.outputs.changelog }}
+        draft: true
