--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -178,7 +178,8 @@ jobs:
 
 
   release:
-    if: startsWith(github.ref, "refs/tags/v")
+    name: Create release
+    if: startsWith( github.ref, 'refs/tags/v' )
     needs: [pytest, docs]
     runs-on: ubuntu-latest
     steps:
