--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -165,8 +165,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip wheel
         grep "numpy" requirements.txt | xargs -I {} pip install "{}"
-        pip install -r requirements.txt
-        pip install -r requirements-docs.txt
+        grep -v -E "^mpi4py|^tensorflow|^xgboost" requirements.txt > requirements.tmp.txt
+        pip install -r requirements.tmp.txt
+        pip install -r docs/requirements-docs.txt
 
     - name: Build Sphinx documentation
       run: |
