--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip wheel
-        grep "numpy" requirements.txt | xargs -I {} pip install "{}"
+        grep "^numpy" requirements.txt | xargs -I {} pip install "{}"
         pip install -r requirements.txt
 
     - name: Lint with flake8
@@ -114,13 +114,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip wheel
-        grep "numpy" requirements.txt | xargs -I {} pip install "{}"
+        grep "^numpy" requirements.txt | xargs -I {} pip install "{}"
         pip install -r requirements.txt
         pip install codecov pytest-cov
 
     - name: Setup MPI
       if: runner.os == 'Linux'
       run: |
+        sudo apt-get update -y
         sudo apt-get install -y openmpi-bin libopenmpi-dev
         pip install mpi4py
 
@@ -164,7 +165,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip wheel
-        grep "numpy" requirements.txt | xargs -I {} pip install "{}"
+        grep "^numpy" requirements.txt | xargs -I {} pip install "{}"
         grep -v -E "^mpi4py|^tensorflow|^xgboost" requirements.txt > requirements.tmp.txt
         pip install -r requirements.tmp.txt
         pip install -r docs/requirements-docs.txt
@@ -219,7 +220,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        grep "numpy" requirements.txt | xargs -I {} pip install "{}"
+        grep "^numpy" requirements.txt | xargs -I {} pip install "{}"
         pip install -r requirements.txt
 
     - name: Update VERSION file
