--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel
+        python -m pip install --upgrade pip wheel setuptools
         grep "^numpy" requirements.txt | xargs -I {} pip install "{}"
         pip install -r requirements.txt
 
@@ -118,7 +118,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel
+        python -m pip install --upgrade pip wheel setuptools
         grep "^numpy" requirements.txt | xargs -I {} pip install "{}"
         pip install -r requirements.txt
         pip install codecov pytest-cov
@@ -169,7 +169,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel
+        python -m pip install --upgrade pip wheel setuptools
         grep "^numpy" requirements.txt | xargs -I {} pip install "{}"
         grep -v -E "^mpi4py|^tensorflow|^xgboost" requirements.txt > requirements.tmp.txt
         pip install -r requirements.tmp.txt
@@ -224,7 +224,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip wheel setuptools
         grep "^numpy" requirements.txt | xargs -I {} pip install "{}"
         pip install -r requirements.txt
 
