--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = .git,__pycache__,notes
+exclude = .git,__pycache__,notes,docs
 max-line-length = 99
 
 # Enable flake8-logging-format:
