--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,23 +23,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         lfs: false
 
     - name: Setup Python 3.7
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: 3.7
-
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-py3.7-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-py3.7-
-          ${{ runner.os }}-pip-
+        cache: 'pip'
 
     - name: Install dependencies
       run: |
@@ -55,7 +47,6 @@ jobs:
         # exit-zero treats all errors as warnings.
         flake8 --exit-zero
 
-
   # Run unit tests on Linux, OSX and Windows
   pytest:
     needs: flake8
@@ -63,14 +54,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
-        include:
-        - os: ubuntu-latest
-          pippath: ~/.cache/pip
-        - os: macos-latest
-          pippath: ~/Library/Caches/pip
-        - os: windows-latest
-          pippath: ~\AppData\Local\pip\Cache
+        python-version: ['3.7', '3.8', '3.9', '3.10']
 
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -80,7 +64,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         lfs: false
         fetch-depth: 0
@@ -99,22 +83,14 @@ jobs:
       run: git lfs pull
 
     - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
 
     - name: Install MacOS specific requirements
       if: runner.os == 'macOS'
       run: brew install libomp
-
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ${{ matrix.pippath }}
-        key: ${{ runner.os }}-pip-py${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-py${{ matrix.python-version }}-
-          ${{ runner.os }}-pip-
 
     - name: Install dependencies
       run: |
@@ -137,10 +113,9 @@ jobs:
       run: pytest --cov --cov-append
 
     - name: Upload coverage
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
       with:
         env_vars: OS,PYTHON
-
 
   # Use sphinx to build the documentation
   docs:
@@ -149,23 +124,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         lfs: false
 
     - name: Setup Python 3.7
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: 3.7
-
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-py3.7-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-py3.7-
-          ${{ runner.os }}-pip-
+        cache: 'pip'
 
     - name: Install dependencies
       run: |
@@ -183,7 +150,7 @@ jobs:
     #  run: |
     #    sphinx-build -a -W --no-color -b coverage -d docs/_build/doctrees docs docs/_build/coverage
 
-
+  # Release tagged commits to GitHub releases:
   release:
     name: Create release
     if: startsWith( github.ref, 'refs/tags/v' )
@@ -191,8 +158,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
+        lfs: false
         fetch-depth: 0
 
     - name: Create LFS file list
@@ -209,18 +177,10 @@ jobs:
       run: git lfs pull
 
     - name: Setup Python 3.7
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: 3.7
-
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-py3.7-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-py3.7-
-          ${{ runner.os }}-pip-
+        cache: 'pip'
 
     - name: Install dependencies
       run: |
@@ -235,6 +195,12 @@ jobs:
       id: vars
       run: echo ::set-output name=tag::${GITHUB_REF#refs/tags/v}
 
+    - name: Generate changelog
+      id: changelog
+      uses: metcalfc/changelog-generator@v3.0.0
+      with:
+        myToken: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -245,4 +211,8 @@ jobs:
         release_name: Version ${{ steps.vars.outputs.tag }}
         body: |
           Version ${{ steps.vars.outputs.tag }}
+
+          Changelog
+          ---------
+          ${{ steps.changelog.outputs.changelog }}
         draft: true
