--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ requests >= 2.5
 tensorflow == 2.9.1
 xgboost == 1.6.1
 tqdm
+pyyaml
 pyentrp == 0.7.1
 h5py >= 3.7
 numba == 0.55.2 # Needed by shap
